[gd_scene load_steps=3 format=3 uid="uid://b7o7wywbxeyxn"]

[ext_resource type="Script" path="res://scripts/upgrade_menu.gd" id="1_2q2j8"]
[ext_resource type="PackedScene" uid="uid://byagnl4svh4nb" path="res://scenes/cards/upgrade_card_slot.tscn" id="2_1p0nj"]

[node name="UpgradeMenu" type="Node2D"]
script = ExtResource("1_2q2j8")

[node name="UpgradeCardSlot0" parent="." instance=ExtResource("2_1p0nj")]
position = Vector2(280, 230)

[node name="UpgradeCardSlot1" parent="." instance=ExtResource("2_1p0nj")]
position = Vector2(580, 230)

[node name="UpgradeCardSlot2" parent="." instance=ExtResource("2_1p0nj")]
position = Vector2(880, 230)

[node name="RerollButton" type="Button" parent="."]
offset_left = 532.0
offset_top = 426.0
offset_right = 640.0
offset_bottom = 457.0
text = "Reroll (-5 HP)"

[node name="StartButton" type="Button" parent="."]
offset_left = 559.0
offset_top = 481.0
offset_right = 605.0
offset_bottom = 512.0
text = "Start"

[connection signal="button_up" from="RerollButton" to="." method="_on_button_button_up"]
[connection signal="button_up" from="StartButton" to="." method="_on_start_button_button_up"]
